--- a/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/index.xhtml
@@ -6,6 +6,10 @@
                 xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/template/common/template.xhtml">
 
+    <f:metadata>
+        <f:event type="preRenderView" listener="#{cdash.preRenderView}"/>
+    </f:metadata>
+
     <ui:define name="content">
 
         <!-- BOX START -->
@@ -21,7 +25,7 @@
                                 <div class="Container100">
                                     <div class="Fleft">
                                         <h3 class="black Fs24 FontThemeMedium">
-                                            Hello, Prashant
+                                            Hello, #{cdash.loggedUserName}
                                         </h3>
                                     </div>
                                 </div>
@@ -31,7 +35,7 @@
 
                     <div class="Container100">
                         <div class="ContainerIndent">
-                            <div class="Container70">
+                            <div class="Container100">
                                 <div class="Container100">
                                     <div class="Fleft">
                                         <h4 class="black Fs24 FontThemeMedium">
@@ -42,18 +46,30 @@
                                         <p:separator style="background-color: blue; height:5px"/>
 
                                         <div class="Container100">
-                                            <p:panel style="height: 20%; width: 100%; background: #f5f5f5;">
-                                                <table class="invNBgrid" style="width: 100%;">
-                                                    <tr style="font-size: 16px;">
-                                                        <td style="width: 70%">Account Name</td>
-                                                        <td style="width: 30%; text-align: right;"><strong>$1,000</strong></td>
-                                                    </tr>
-                                                    <tr style="font-size: 13px;">
-                                                        <td style="width: 15%">Review</td>
-                                                        <td style="width: 85%"></td>
-                                                    </tr>
-                                                </table>
-                                            </p:panel>
+                                            <p:dataGrid style="background: transparent;"
+                                                        var="acct" value="#{cdash.dashboardList}"
+                                                        columns="1" layout="grid">
+                                                <p:panel style="height: 20%; width: 100%; background: #f5f5f5;">
+                                                    <table class="invNBgrid" style="width: 100%;">
+                                                        <tr style="font-size: 16px;">
+                                                            <td style="width: 70%;">#{acct.description}</td>
+                                                            <td style="width: 30%; text-align: right;">
+                                                                <strong>
+                                                                    <h:outputText value="#{acct.investment}">
+                                                                        <f:convertNumber currencySymbol="$" type="currency"/>
+                                                                     </h:outputText>
+                                                                </strong></td>
+                                                        </tr>
+                                                        <tr style="font-size: 13px;">
+                                                            <td colspan="2" style="width: 100%; margin-left: 5px">
+                                                                <a href="#">Review</a>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </p:panel>
+
+                                                <div class="EmptyBox5"></div>
+                                            </p:dataGrid>
                                         </div>
                                     </div>
                                 </div>
@@ -63,21 +79,21 @@
                 </div>
 
 
-<!--
-                <p:outputPanel id="disclaimer" style="border: 0px">
+                <!--
+                                <p:outputPanel id="disclaimer" style="border: 0px">
 
-                    <div class="layout-portlets-box">
-                        <div class="Container100 Responsive100">
-                            <div class="Container100 Responsive100">
-                                <div class="ContainerIndent Responsive100">
-                                    <div class="Fs12 TexAlCenter">
+                                    <div class="layout-portlets-box">
+                                        <div class="Container100 Responsive100">
+                                            <div class="Container100 Responsive100">
+                                                <div class="ContainerIndent Responsive100">
+                                                    <div class="Fs12 TexAlCenter">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </p:outputPanel>
--->
+                                </p:outputPanel>
+                -->
 
             </p:panel>
 
