--- a/ltam/modules/web/src/main/webapp/message.xhtml
+++ b/ltam/modules/web/src/main/webapp/message.xhtml
@@ -20,8 +20,9 @@
                      style="margin-top:5%;">
                     <div class="Container90 Fnone MarAuto TexAlCenter">
                         <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}" styleClass="Fleft" library="spark-layout"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                        styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
 
                         <div class="EmptyBox20"></div>
                         <div class="Container90">
