--- a/ltam/modules/web/src/main/webapp/signupApproval.xhtml
+++ b/ltam/modules/web/src/main/webapp/signupApproval.xhtml
@@ -12,8 +12,9 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form>
                         <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{menu.logo}" styleClass="Fleft" library="spark-layout"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                        <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
+                                        styleClass="Fleft" library="invessence"
+                                        class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                         <div class="EmptyBox20"></div>
                         <div class="Container90">
                             <h1>You registration process is almost complete.</h1>
@@ -28,7 +29,7 @@
 
                             <p>
                                 If you can't find the confirmation email, please check your spam/junk folder and add
-                                <a href="${apache.url}">"invessence.com"</a> as a trusted site.
+                                <a href="${apache.url}">${apache.url}</a> as a trusted site.
 
 
                             </p>
