--- a/ltam/modules/web/src/main/webapp/backup/signup-v3.xhtml
+++ b/ltam/modules/web/src/main/webapp/backup/signup-v3.xhtml
@@ -64,7 +64,7 @@
                                              value="#{userBean.beanEmail}" placeholder="Email"
                                              required="true" requiredMessage="Please enter Email."
                                         validatorMessage="Email format is not correct.">
-                                    <f:validator validatorId="EmailValidator" />
+                                    <f:validator validatorId="UserIDValidator" />
                                     <p:watermark for="email" value="Email Address"/>
                                 </p:inputText>
 
