--- a/ltam/modules/web/src/main/webapp/signup.xhtml
+++ b/ltam/modules/web/src/main/webapp/signup.xhtml
@@ -5,14 +5,16 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/template/common/simplelayout.xhtml">
 
+    <f:metadata>
+        <f:viewParam name="e" value="#{userBean.beanEmail}"/>
+        <f:event type="preRenderView" listener="#{userBean.preRenderSignup}"/>
+    </f:metadata>
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
                 <div class="Container90 Fnone MarAuto TexAlLeft">
                     <h:form>
-                        <div class="EmptyBox20"></div>
                         <div class="Container100 TexAlCenter">
                             <h:graphicImage id="logo" name="#{uiLayout.uiprofile.logo}"
                                             styleClass="Fleft" library="invessence"
@@ -26,10 +28,9 @@
                             <p:panel id="p1" styleClass="Container100" style="border: 0px">
                                 <div class="Container100">
                                     <div class="ContainerIndent">
-                                        <p:inputText id="email" styleClass="Container80 Fleft MarAuto Fs18"
-                                                     value="#{userBean.email}" placeholder="Email"
-                                                     required="true" requiredMessage="Please enter Email."
-                                                     validatorMessage="Email format is not correct.">
+                                        <p:inputText id="email" readonly="true"
+                                                     styleClass="Container80 Fleft MarAuto Fs18"
+                                                     value="#{userBean.beanEmail}" placeholder="Email">
                                         </p:inputText>
 
                                     </div>
@@ -37,11 +38,25 @@
                                 <div class="EmptyBox10"></div>
                                 <div class="Container100">
                                     <div class="ContainerIndent">
-                                        <p:inputText id="userid" styleClass="Container80 Fleft MarAuto Fs18"
-                                                     value="#{userBean.userID}" placeholder="User ID"
-                                                     required="true" requiredMessage="Please create your User ID."
-                                                     validatorMessage="User ID format is not correct.">
+                                        <p:inputText id="userid" styleClass="Container60 Fleft MarAuto Fs18"
+                                                     value="#{userBean.beanUserID}" placeholder="User ID"
+                                                     required="true" requiredMessage="Please create your User ID.">
+                                            <f:validator validatorId="UserIDValidator" />
                                         </p:inputText>
+                                        <p:commandButton id="uidHelp"  styleClass="Container10 Fright"
+                                                         icon="fa fa-question Fs18 white"
+                                                         process="@none"/>
+
+                                        <p:overlayPanel id="uidHP" for="uidHelp"
+                                                        hideEffect="fade" dynamic="false"
+                                                        showCloseIcon="true"
+                                                        style="width:350px; margin-left: 5px">
+                                            UserID must contain a minimum of 6 Characters:
+                                            <ul>
+                                                <li>Only Alpha-Numeric characters</li>
+                                                <li>May contains these special character [_-.]</li>
+                                            </ul>
+                                        </p:overlayPanel>
 
                                     </div>
                                 </div>
@@ -49,19 +64,19 @@
                                 <div class="Container100">
                                     <div class="ContainerIndent">
                                         <p:password id="pwd1" styleClass="Container60 Fleft MarAuto Fs18"
-                                                    value="#{userBean.password}"
+                                                    value="#{userBean.pwd1}"
                                                     placeholder="Password"
                                                     feedback="true" inline="false"
                                                     required="true" requiredMessage="Password must be entered.">
                                         </p:password>
-                                        <p:commandButton id="pwdHelp"  styleClass="Container25 Fright"
-                                                         icon="fa fa-question-circle white"
-                                                         value="Help" process="@none"/>
+                                        <p:commandButton id="pwdHelp"  styleClass="Container10 Fright"
+                                                         icon="fa fa-question Fs18 white"
+                                                         process="@none"/>
 
                                         <p:overlayPanel id="helpPanel" for="pwdHelp"
                                                         hideEffect="fade" dynamic="false"
                                                         showCloseIcon="true"
-                                                        style="width:300px; margin-left: 5px">
+                                                        style="width:350px; margin-left: 5px">
                                             Password Must contain a minimum of 8 Characters including at least:
                                             <ul>
                                                 <li>1 uppercase letter</li>
@@ -76,19 +91,18 @@
                                 <div class="Container100">
                                     <div class="ContainerIndent">
                                         <p:password id="pwd2" styleClass="Container60 Fleft MarAuto Fs18"
-                                                    value="#{userBean.confirmNewPassword}"
-                                                    placeholder="Confirm Password"
-                                                    feedback="true" inline="true">
+                                                    value="#{userBean.pwd2}"
+                                                    placeholder="Confirm Password">
                                         </p:password>
                                     </div>
                                 </div>
                                 <div class="EmptyBox10"></div>
                                 <p:separator/>
                                 <div class="EmptyBox5"></div>
-                                <div class="Container100 TexAlCenter">
-                                   <div class="ContainerIndent">
-                                       <p:commandButton value="Sign Up" type="submit" styleClass="Fright"
-                                                        actionListener="#{userBean.signUp}"
+                                <div class="Container100">
+                                   <div class="ContainerIndent TexAlCenter">
+                                       <p:commandButton value="Next" type="submit"
+                                                        actionListener="#{userBean.gotoSignPage2}"
                                                         update="p1, sgrowl"/>
                                    </div>
                                 </div>
