--- a/ltam/modules/web/src/main/webapp/signup3.xhtml
+++ b/ltam/modules/web/src/main/webapp/signup3.xhtml
@@ -7,8 +7,7 @@
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form>
                         <div class="EmptyBox50"></div>
@@ -16,27 +15,29 @@
                                         styleClass="Fleft" library="invessence"
                                         class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
                         <div class="EmptyBox20"></div>
-                        <div class="Container90">
-                            <h1>You registration process is almost complete.</h1>
+                        <div class="ContainerIndent">
+                            <h2>This is your final step.</h2>
                         </div>
                         <div class="EmptyBox20"></div>
-                        <div class="Container90">
+                        <div class="ContainerIndent">
 
                             <h3>
-                                You will receive a confirmation email soon. Follow the instructions in the email message to complete the registration process.
+                                Security of your account is our top priority.  So, you will receive a confirmation email soon.
+                                Follow the instructions in the email message to activate your account. Once activated, you will
+                                have access to your personalized portfolio.
                             </h3>
                             <br/>
 
                             <p>
                                 If you can't find the confirmation email, please check your spam/junk folder and add
                                 <a href="${apache.url}">${apache.url}</a> as a trusted site.
-
-
                             </p>
                         </div>
                         <div class="EmptyBox20"></div>
-                        <p:button  value="Login" styleClass="Fs16 BlueButton" href="/login.xhtml"></p:button>
-                        <p:button  value="Home" styleClass="Fs16 OrangeButton" href="${apache.url}"></p:button>
+                        <p:button  value="OK" styleClass="Fs16 BlueButton" href="/login.xhtml"></p:button>
+                        <div class="EmptyBox20"></div>
+                        <p:commandButton  value="Resend Code" styleClass="Fs16 OrangeButton"
+                                   actionListener="#{userBean.resendCode}"></p:commandButton>
                         <div class="EmptyBox50"></div>
 
                     </h:form>
